# promptclub

./: .env.example  .gcloudignore  Dockerfile  README.md  cloudbuild.yaml  deploy-experimental.sh  deploy.sh  docker-compose.yml  librechat.mcp.yml  main.py  pyproject.toml  requirements.txt
app/: citations.py  main.py  models.py  settings.py  utils.py
app/adapters/: clinicaltrials.py  clinicaltrials_v2.py  openfda.py  opentargets.py  pubmed.py  vertex_google_search.py  web_context.py
app/knowledge/: __init__.py
app/services/: enrichment.py  llm_orchestration.py  orchestration.py
app/viz/: __init__.py  adapters.py  build.py  contract.py  coverage_log.py  decision.py  fallback.py  mcp_output.py  render_hints.py  theme.py
app/viz/recipes/: __init__.py  (+10 more)
scripts/: audit_viz_paths.py  mcp_queries.py
scripts/curation/: README.md  generate_lexicon.py  review_worksheet_to_yaml.py
tests/: test_llm_orchestration.py  test_normalisation.py  test_orchestration_latency.py  test_orchestration_with_enrichment.py  test_smoke.py  test_tool_fail_soft.py
tests/curation/: test_generation.py  test_merge_worksheet.py
tests/knowledge/: test_lexicon_quality.py  test_loader.py  test_schema.py
tests/services/: test_enrichment.py
tests/viz/: conftest.py  test_adapters.py  test_audit_ratchet.py  test_build_response_fallback.py  test_contract.py  test_coverage_log.py  test_decision.py  test_envelope_guarantee.py  test_fallback_selection.py  test_mcp_output.py  test_new_recipe_names.py  test_no_data_path_eliminated.py  test_recipes.py  test_tool_surface_guarantee.py  test_utils.py
(+22 files in other folders)
