[project]
name = "promptclub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "google-genai==1.13.0",
    "httpx==0.28.1",
    "mcp==1.9.4",
    "pydantic==2.11.3",
    "pydantic-settings==2.8.1",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "tenacity==9.1.2",
    "uvicorn[standard]==0.34.2",
]
